--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "validate": "npm-run-all --parallel check-types check-format lint build"
   },
   "dependencies": {
-    "@ethersproject/contracts": "5.0.6",
-    "@ethersproject/providers": "5.0.15",
-    "@ethersproject/solidity": "5.0.6",
+    "@ethersproject/contracts": "^5.0.8",
+    "@ethersproject/providers": "^5.0.17",
+    "@ethersproject/solidity": "^5.0.7",
     "@headlessui/react": "0.2.0",
     "@portis/web3": "^2.0.0-beta.59",
     "@tailwindcss/aspect-ratio": "0.2.0",
@@ -42,6 +42,7 @@
     "react-query": "2.26.2",
     "react-select": "3.1.0",
     "walletlink": "^2.0.2",
+    "web3": "1.2.11",
     "zustand": "3.2.0"
   },
   "devDependencies": {
