--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "luxon": "1.25.0",
     "next": "10.0.2",
     "nprogress": "0.2.0",
+    "numeral": "^2.0.6",
     "postcss": "8.1.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
