--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,18 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["inline-react-svg"]
+  "plugins": [
+    [
+      "inline-react-svg",
+      {
+        "svgo": {
+          "plugins": [
+            {
+              "cleanupIDs": false
+            }
+          ]
+
+        }
+      }
+    ]
+  ]
 }
