--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/lodash": "^4.14.167",
     "@uniswap/sdk": "3.0.3",
     "@walletconnect/web3-provider": "^1.3.1",
+    "airtable": "0.10.1",
     "autoprefixer": "10.0.2",
     "axios": "^0.21.0",
     "bignumber.js": "9.0.1",
@@ -44,6 +45,7 @@
     "react": "17.0.1",
     "react-cookie-consent": "^6.2.2",
     "react-dom": "17.0.1",
+    "react-hot-toast": "1.0.2",
     "react-query": "2.26.2",
     "react-select": "3.1.0",
     "sha3": "^2.1.3",
