--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ideamarket-frontend",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -31,6 +34,7 @@
     "axios": "^0.21.0",
     "bignumber.js": "9.0.1",
     "chart.js": "^2.9.4",
+    "chrome-aws-lambda": "8.0.2",
     "classnames": "2.2.6",
     "fortmatic": "^2.2.1",
     "graphql": "15.4.0",
@@ -39,9 +43,11 @@
     "lodash": "^4.17.20",
     "luxon": "1.25.0",
     "next": "10.0.2",
+    "next-seo": "4.23.0",
     "nprogress": "0.2.0",
     "numeral": "^2.0.6",
     "postcss": "8.1.7",
+    "puppeteer-core": "8.0.0",
     "react": "17.0.1",
     "react-cookie-consent": "^6.2.2",
     "react-dom": "17.0.1",
