--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|ts|tsx)\"",
     "format": "npm run prettier -- --write",
     "check-format": "npm run prettier -- --list-different",
-    "validate": "npm-run-all --parallel check-types check-format lint build"
+    "validate": "npm-run-all --parallel check-types check-format lint build",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
     "@ethersproject/contracts": "^5.0.8",
@@ -41,7 +44,7 @@
     "graphql-request": "3.3.0",
     "immer": "8.0.0",
     "lodash": "^4.17.20",
-    "luxon": "1.25.0",
+    "luxon": "1.26.0",
     "next": "10.0.2",
     "next-seo": "4.23.0",
     "nprogress": "0.2.0",
@@ -60,8 +63,9 @@
     "zustand": "3.2.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^10.1.3",
     "@types/classnames": "2.2.11",
-    "@types/luxon": "1.25.0",
+    "@types/luxon": "1.26.3",
     "@types/node": "14.14.8",
     "@types/react": "16.9.56",
     "@types/react-select": "3.0.26",
@@ -69,6 +73,7 @@
     "@typescript-eslint/parser": "4.8.1",
     "babel-eslint": "10.1.0",
     "babel-plugin-inline-react-svg": "1.1.2",
+    "cross-env": "^7.0.3",
     "eslint": "7.13.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-config-react-app": "6.0.0",
