--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "chart.js": "^2.9.4",
     "chrome-aws-lambda": "8.0.2",
     "classnames": "2.2.6",
+    "clone-deep": "4.0.1",
     "fortmatic": "^2.2.1",
     "graphql": "15.4.0",
     "graphql-request": "3.3.0",
     "immer": "8.0.0",
-    "lodash": "^4.17.20",
     "luxon": "1.26.0",
     "next": "10.0.2",
     "next-seo": "4.23.0",
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^10.1.3",
     "@types/classnames": "2.2.11",
+    "@types/clone-deep": "4.0.1",
     "@types/luxon": "1.26.3",
     "@types/node": "14.14.8",
     "@types/react": "16.9.56",
