--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-hot-toast": "1.0.2",
     "react-query": "2.26.2",
     "react-select": "3.1.0",
+    "react-time-ago": "6.2.2",
     "sha3": "^2.1.3",
     "use-breakpoint": "1.1.6",
     "walletlink": "^2.0.2",
