--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "graphql-request": "3.3.0",
     "immer": "8.0.0",
     "luxon": "1.26.0",
-    "next": "^10.0.2",
+    "next": "^10.1.4-canary.2",
     "next-seo": "4.23.0",
     "nprogress": "0.2.0",
     "numeral": "^2.0.6",
