--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ BASE_NAME='emails'
 VIEW_NAME='Grid view'
 FIELD_NAME='email'
 NEXT_PUBLIC_OG_IMAGE_URL='https://og-image.ideamarket.io'
+GRAPHCMS_API_KEY=''
+GRAPHCMS_ENDPOINT=''
