--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "immer": "8.0.1",
     "lodash": "^4.17.20",
     "luxon": "1.25.0",
+    "markdown-to-jsx": "^7.1.2",
     "next": "10.0.2",
     "next-seo": "4.23.0",
     "nprogress": "0.2.0",
