--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ethersproject/providers": "^5.0.17",
     "@ethersproject/solidity": "^5.0.7",
     "@headlessui/react": "0.2.0",
+    "@heroicons/react": "^1.0.1",
     "@portis/web3": "^2.0.0-beta.59",
     "@tailwindcss/aspect-ratio": "0.2.0",
     "@tailwindcss/forms": "0.2.1",
@@ -45,6 +46,7 @@
     "luxon": "1.25.0",
     "next": "^10.1.3",
     "next-seo": "4.23.0",
+    "next-themes": "^0.0.14",
     "nprogress": "0.2.0",
     "numeral": "^2.0.6",
     "postcss": "8.1.7",
