--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "12.x"
   },
   "scripts": {
-    "dev": "NODE_OPTIONS=\"--max_old_space_size=8192\" next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix --ext .js,.ts,.tsx --ignore-path .gitignore .",
