--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "plugins": ["prettier"],
   "extends": ["react-app", "plugin:prettier/recommended"],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": ["off", { "singleQuote": true }],
     "react/react-in-jsx-scope": "off",
     "jsx-a11y/anchor-is-valid": "off"
   }
