--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lodash": "^4.17.21",
     "luxon": "1.27.0",
     "next": "^11.0.1",
-    "next-seo": "4.24.0",
+    "next-seo": "^4.26.0",
     "next-themes": "^0.0.14",
     "nprogress": "0.2.0",
     "numeral": "^2.0.6",
