--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "plugins": ["prettier"],
   "extends": ["react-app", "plugin:prettier/recommended"],
+  "ignorePatterns": [".github/*"],
   "rules": {
     "prettier/prettier": ["off", { "singleQuote": true }],
     "react/react-in-jsx-scope": "off",
