--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,4 +24,6 @@ jobs:
         uses: wearerequired/lint-action@v1.10.0
         with:
           eslint: true
+          eslint_args: "--max-warnings 0"
+          eslint_extensions: "js,ts,tsx"
           prettier: true
