--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+      with:
+          node-version: 12
       - run: yarn && yarn global add @lhci/cli@0.8.x
       - run: yarn run build
       - run: lhci autorun
