--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -11,6 +11,7 @@ jobs:
           node-version: 12
       - run: yarn install --frozen-lockfile && yarn global add @lhci/cli
       - run: echo "NEXT_PUBLIC_NETWORK=mainnet" > .env.local
+      - run: echo "NEXT_PUBLIC_OG_IMAGE_URL=https://og-image.ideamarket.io" > .env.local
       - run: yarn build
       - run: lhci autorun --config=.github/lighthouse/lighthouserc-desktop.json
         env:
