--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix --max-warnings=0 --ext .js,.ts,.tsx --ignore-path .gitignore .",
+    "lint": "eslint --fix --max-warnings=2 --ext .js,.ts,.tsx --ignore-path .gitignore .",
     "check-types": "tsc",
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|ts|tsx)\"",
     "format": "npm run prettier -- --write",
@@ -51,6 +51,7 @@
     "lodash": "^4.17.21",
     "luxon": "1.27.0",
     "next": "^11.0.1",
+    "next-pwa": "^5.2.24",
     "next-seo": "4.24.0",
     "next-themes": "^0.0.14",
     "nprogress": "0.2.0",
