feat: basic sentry setup

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ BASE_NAME='emails'
 VIEW_NAME='Grid view'
 FIELD_NAME='email'
 NEXT_PUBLIC_OG_IMAGE_URL='https://og-image.ideamarket.io'
+NEXT_PUBLIC_SENTRY_DSN=""
