--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@headlessui/react": "1.2.0",
     "@heroicons/react": "1.0.1",
     "@portis/web3": "^2.0.0-beta.59",
+    "@sentry/nextjs": "^6.11.0",
     "@tailwindcss/aspect-ratio": "0.2.1",
     "@tailwindcss/forms": "0.3.2",
     "@tailwindcss/typography": "0.4.1",
