--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,13 @@ VIEW_NAME='Grid view'
 FIELD_NAME='email'
 NEXT_PUBLIC_OG_IMAGE_URL='https://og-image.ideamarket.io'
 NEXT_PUBLIC_SENTRY_DSN=""
+EMAIL_SERVER_HOST='smtp.sendgrid.net'
+EMAIL_SERVER_PORT='587'
+EMAIL_SERVER_USER='apikey'
+EMAIL_SERVER_PASSWORD='xxxxxxxxxxx'
+EMAIL_FROM='Ideamarket <xxxxxx@ideamarket.io>'
+FAUNADB_SECRET='xxxxxxxxxxx'
+AWS_ACCESS_KEY='xxxxxxxxxxx'
+AWS_SECRET_KEY='xxxxxxxxxxx'
+NEXT_PUBLIC_AWS_REGION='us-xxxx-1'
+NEXT_PUBLIC_AWS_S3_BUCKET_NAME='bucket-name'
