--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@ethersproject/solidity": "^5.2.0",
     "@headlessui/react": "1.2.0",
     "@heroicons/react": "1.0.1",
-    "@portis/web3": "^4.0.5",
+    "@next-auth/fauna-adapter": "0.2.2",
+    "@portis/web3": "^2.0.0-beta.59",
     "@sentry/nextjs": "^6.11.0",
     "@tailwindcss/aspect-ratio": "0.2.1",
     "@tailwindcss/forms": "0.3.2",
@@ -32,6 +33,7 @@
     "@types/chart.js": "^2.9.28",
     "@types/lodash": "^4.14.170",
     "@types/node": "^16.10.3",
+    "@types/uuid": "8.3.1",
     "@uniswap/sdk": "3.0.3",
     "@walletconnect/ethereum-provider": "^1.6.6",
     "@web3-react/core": "^6.1.9",
@@ -42,6 +44,7 @@
     "@web3-react/walletlink-connector": "^6.2.0",
     "airtable": "0.11.1",
     "autoprefixer": "10.2.6",
+    "aws-sdk": "2.982.0",
     "axios": "^0.21.1",
     "bignumber.js": "9.0.1",
     "chart.js": "^2.9.4",
@@ -49,12 +52,15 @@
     "classnames": "2.3.1",
     "copy-to-clipboard": "^3.3.1",
     "fortmatic": "^2.2.1",
+    "fauna-schema-migrate": "2.1.2",
+    "faunadb": "4.4.1",
     "graphql": "15.5.0",
     "graphql-request": "3.4.0",
     "immer": "9.0.6",
     "lodash": "^4.17.21",
     "luxon": "1.27.0",
     "next": "11.1.2",
+    "next-auth": "3.29.0",
     "next-pwa": "^5.2.24",
     "next-seo": "4.24.0",
     "next-themes": "^0.0.14",
@@ -72,6 +78,7 @@
     "sha3": "^2.1.4",
     "use-breakpoint": "2.0.0",
     "walletlink": "^2.1.11",
+    "uuid": "8.3.2",
     "web3": "1.3.6",
     "web3-react": "^5.0.5",
     "zustand": "3.5.1"
