chore: update environment variables

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ EMAIL_SERVER_USER='apikey'
 EMAIL_SERVER_PASSWORD='xxxxxxxxxxx'
 EMAIL_FROM='Ideamarket <xxxxxx@ideamarket.io>'
 FAUNADB_SECRET='xxxxxxxxxxx'
-AWS_ACCESS_KEY='xxxxxxxxxxx'
-AWS_SECRET_KEY='xxxxxxxxxxx'
-NEXT_PUBLIC_AWS_REGION='us-xxxx-1'
-NEXT_PUBLIC_AWS_S3_BUCKET_NAME='bucket-name'
+IM_AWS_ACCESS_KEY='xxxxxxxxxxx'
+IM_AWS_SECRET_KEY='xxxxxxxxxxx'
+NEXT_PUBLIC_IM_AWS_REGION='us-xxxx-1'
+NEXT_PUBLIC_IM_AWS_S3_BUCKET_NAME='bucket-name'
