feat: access profile photos from cloudfront distribution

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,6 @@ EMAIL_FROM='Ideamarket <xxxxxx@ideamarket.io>'
 FAUNADB_SECRET='xxxxxxxxxxx'
 IM_AWS_ACCESS_KEY='xxxxxxxxxxx'
 IM_AWS_SECRET_KEY='xxxxxxxxxxx'
-NEXT_PUBLIC_IM_AWS_REGION='us-xxxx-1'
-NEXT_PUBLIC_IM_AWS_S3_BUCKET_NAME='bucket-name'
+IM_AWS_REGION='us-xxxx-1'
+USER_ACCOUNTS_S3_BUCKET='some-bucket-name'
+USER_ACCOUNTS_CLOUDFRONT_DOMAIN='https://some-domain'
