--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "17.0.2",
     "react-cookie-consent": "^6.2.3",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.15.0",
     "react-hot-toast": "1.0.2",
     "react-query": "2.26.2",
     "react-select": "4.3.1",
