--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-select": "4.3.1",
     "react-time-ago": "6.2.2",
     "sha3": "^2.1.4",
+    "twin.macro": "^2.7.0",
     "use-breakpoint": "2.0.0",
     "walletlink": "^2.1.11",
     "uuid": "8.3.2",
