--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-select": "4.3.1",
     "react-time-ago": "6.2.2",
     "sha3": "^2.1.4",
+    "twin.macro": "^2.7.0",
     "use-breakpoint": "2.0.0",
     "web3": "1.3.6",
     "web3-react": "^5.0.5",
