--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ethersproject/solidity": "^5.2.0",
     "@headlessui/react": "1.2.0",
     "@heroicons/react": "1.0.1",
-    "@portis/web3": "^2.0.0-beta.59",
+    "@portis/web3": "^4.0.5",
     "@sentry/nextjs": "^6.11.0",
     "@tailwindcss/aspect-ratio": "0.2.1",
     "@tailwindcss/forms": "0.3.2",
@@ -46,6 +46,7 @@
     "chrome-aws-lambda": "9.1.0",
     "classnames": "2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "fortmatic": "^2.2.1",
     "graphql": "15.5.0",
     "graphql-request": "3.4.0",
     "immer": "9.0.6",
