--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@types/chart.js": "^2.9.28",
     "@types/lodash": "^4.14.170",
     "@uniswap/sdk": "3.0.3",
+    "@walletconnect/ethereum-provider": "^1.6.6",
     "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/portis-connector": "^6.1.9",
+    "@web3-react/types": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.0",
     "@web3-react/walletlink-connector": "^6.2.0",
     "airtable": "0.11.1",
@@ -79,7 +81,6 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/classnames": "2.3.1",
     "@types/luxon": "1.26.5",
-    "@types/node": "15.6.1",
     "@types/react": "17.0.8",
     "@types/react-select": "4.0.15",
     "@typescript-eslint/eslint-plugin": "4.25.0",
