--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "@tailwindcss/typography": "0.4.1",
     "@types/chart.js": "^2.9.28",
     "@types/lodash": "^4.14.170",
+    "@types/node": "^16.10.3",
     "@uniswap/sdk": "3.0.3",
     "@walletconnect/ethereum-provider": "^1.6.6",
     "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/portis-connector": "^6.1.9",
-    "@web3-react/types": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.0",
     "@web3-react/walletlink-connector": "^6.2.0",
     "airtable": "0.11.1",
