fix: several minor improvements

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_NETWORK=mainnet|rinkeby|kovan|test|test-avm-l2
+NEXT_PUBLIC_NETWORK=mainnet|avm|test-avm-l1|test-avm-l2
 AIRTABLE_API_KEY='YOUR_AIRTABLE_KEY'
 BASE_ID='YOUR_AIRTABLE_BASE_ID'
 BASE_NAME='emails'
