--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@types/lodash": "^4.14.177",
     "@types/node": "^16.11.9",
     "@types/uuid": "8.3.3",
-    "@uniswap/sdk": "3.0.3",
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/v3-periphery": "^1.2.1",
+    "@uniswap/v3-sdk": "^3.5.1-optimism-regensis",
     "@walletconnect/ethereum-provider": "^1.6.6",
     "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
