feat: added mixpanel

--- a/package.json
+++ b/package.json
@@ -51,14 +51,15 @@
     "chrome-aws-lambda": "9.1.0",
     "classnames": "2.3.1",
     "copy-to-clipboard": "^3.3.1",
-    "fortmatic": "^2.2.1",
     "fauna-schema-migrate": "2.1.2",
     "faunadb": "4.4.1",
+    "fortmatic": "^2.2.1",
     "graphql": "15.5.0",
     "graphql-request": "3.4.0",
     "immer": "9.0.6",
     "lodash": "^4.17.21",
     "luxon": "1.27.0",
+    "mixpanel-browser": "^2.41.0",
     "next": "11.1.2",
     "next-auth": "3.29.0",
     "next-pwa": "^5.2.24",
@@ -78,8 +79,8 @@
     "react-time-ago": "6.2.2",
     "sha3": "^2.1.4",
     "use-breakpoint": "2.0.0",
-    "walletlink": "^2.1.11",
     "uuid": "8.3.2",
+    "walletlink": "^2.1.11",
     "web3": "1.3.6",
     "web3-react": "^5.0.5",
     "zustand": "3.5.1"
