chore: lighthouse mixpanel key

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           node-version: 12
       - run: yarn install --frozen-lockfile && yarn global add @lhci/cli
-      - run: echo -e "NEXT_PUBLIC_NETWORK=avm\nNEXT_PUBLIC_OG_IMAGE_URL=https://og-image.ideamarket.io" > .env.local
+      - run: echo -e "NEXT_PUBLIC_NETWORK=avm\nNEXT_PUBLIC_OG_IMAGE_URL=https://og-image.ideamarket.io\nMIX_PANEL_KEY=bdc8707c5ca435eebe1eb76c4a9d85d5" > .env.local
       - run: yarn build
       - run: lhci autorun --config=.github/lighthouse/lighthouserc-desktop.json
         env:
