feat: add api to fetch data from google-trends-api

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,4 @@ IM_AWS_SECRET_KEY='xxxxxxxxxxx'
 IM_AWS_REGION='us-xxxx-1'
 USER_ACCOUNTS_S3_BUCKET='some-bucket-name'
 NEXT_PUBLIC_USER_ACCOUNTS_CLOUDFRONT_DOMAIN='https://some-domain'
+WIKIPEDIA_GOOGLE_TRENDS_CACHE_VALIDITY='86400'
