--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "fauna-schema-migrate": "2.1.2",
     "faunadb": "4.4.1",
     "fortmatic": "^2.2.1",
+    "google-trends-api": "4.9.2",
     "graphql": "15.5.0",
     "graphql-request": "3.4.0",
     "immer": "9.0.6",
