feat: add wikipedia snapshot api | IMDEV-255

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ IM_AWS_REGION='us-xxxx-1'
 USER_ACCOUNTS_S3_BUCKET='some-bucket-name'
 NEXT_PUBLIC_USER_ACCOUNTS_CLOUDFRONT_DOMAIN='https://some-domain'
 WIKIPEDIA_GOOGLE_TRENDS_CACHE_VALIDITY='86400'
+WIKIPEDIA_SNAPSHOT_CACHE_VALIDITY='86400'
+MARKETS_S3_BUCKET='markets-s3-bucket-name'
+MARKETS_CLOUDFRONT_DOMAIN='https://markets-cloudfront-distribution-domain'
+VERCEL_URL='http://localhost:3000'
