--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "nprogress": "0.2.0",
     "numeral": "^2.0.6",
     "postcss": "8.3.0",
+    "puppeteer": "11.0.0",
     "puppeteer-core": "9.1.1",
     "react": "17.0.2",
     "react-cookie-consent": "^6.2.3",
