fix: puppeteer issue in production env

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ WIKIPEDIA_SNAPSHOT_CACHE_VALIDITY='86400'
 MARKETS_S3_BUCKET='markets-s3-bucket-name'
 MARKETS_CLOUDFRONT_DOMAIN='https://markets-cloudfront-distribution-domain'
 VERCEL_URL='http://localhost:3000'
+GENERATE_UPLOAD_PDF_API_HOST_URL='http://localhost:3000'
