--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ MARKETS_S3_BUCKET='markets-s3-bucket-name'
 MARKETS_CLOUDFRONT_DOMAIN='https://markets-cloudfront-distribution-domain'
 VERCEL_URL='http://localhost:3000'
 GENERATE_UPLOAD_PDF_API_HOST_URL='http://localhost:3000'
+WIKIPEDIA_PAGE_VIEWS_CACHE_VALIDITY='86400'
+WIKIPEDIA_PAGE_VIEWS_TEMP_CACHE_VALIDITY='14400'
