--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@web3-react/fortmatic-connector": "^6.1.6",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/portis-connector": "^6.1.9",
-    "@web3-react/walletconnect-connector": "^6.2.0",
-    "@web3-react/walletlink-connector": "^6.2.0",
+    "@web3-react/walletconnect-connector": "6.2.4",
+    "@web3-react/walletlink-connector": "^6.2.8",
     "airtable": "0.11.1",
     "autoprefixer": "10.2.6",
     "aws-sdk": "2.982.0",
