feat: add featureSwitch api

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,4 @@ WIKIPEDIA_SNAPSHOT_CACHE_VALIDITY='86400'
 WIKIPEDIA_GOOGLE_TRENDS_CACHE_VALIDITY='86400'
 WIKIPEDIA_PAGE_VIEWS_CACHE_VALIDITY='86400'
 WIKIPEDIA_PAGE_VIEWS_TEMP_CACHE_VALIDITY='14400'
+FEATURE_SWITCHES_CACHE_VALIDITY='1800'
