--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ EMAIL_SERVER_PORT='587'
 EMAIL_SERVER_USER='apikey'
 EMAIL_SERVER_PASSWORD='xxxxxxxxxxx'
 EMAIL_FROM='Ideamarket <xxxxxx@ideamarket.io>'
+FAUNADB_DOMAIN='db.fauna.com'
 FAUNADB_SECRET='xxxxxxxxxxx'
 IM_AWS_ACCESS_KEY='xxxxxxxxxxx'
 IM_AWS_SECRET_KEY='xxxxxxxxxxx'
