--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "arrowParens": "always",
   "singleQuote": true,
   "proseWrap": "never",
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "endOfLine": "auto"
 }
