--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.2",
     "react-hot-toast": "2.1.1",
+    "react-icons": "^4.3.1",
     "react-query": "2.26.2",
     "react-select": "5.2.1",
     "sha3": "^2.1.4",
