fix: mobile navbar redesign

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
   "rules": {
     "prettier/prettier": ["off", { "singleQuote": true }],
     "react/react-in-jsx-scope": "off",
-    "jsx-a11y/anchor-is-valid": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "linebreak-style": 0
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
