fix: gitattributes remove

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
   "rules": {
     "prettier/prettier": ["off", { "singleQuote": true }],
     "react/react-in-jsx-scope": "off",
-    "jsx-a11y/anchor-is-valid": "off",
-    "linebreak-style": 0
+    "jsx-a11y/anchor-is-valid": "off"
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
