--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,5 @@ WIKIPEDIA_PAGE_VIEWS_TEMP_CACHE_VALIDITY='14400'
 FEATURE_SWITCHES_CACHE_VALIDITY='1800'
 WIKIPEDIA_VALID_PAGE_CACHE_VALIDITY='2592000'
 MIX_PANEL_KEY='xxxxxxxxxxx'
+
+IDEAMARKET_BACKEND_HOST='https://some-domain'
