--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-hook-form": "^7.20.2",
     "react-hot-toast": "2.1.1",
     "react-icons": "^4.3.1",
+    "react-input-verification-code": "^0.8.0",
     "react-query": "2.26.2",
     "react-select": "5.2.1",
     "sha3": "^2.1.4",
@@ -87,6 +88,7 @@
     "zustand": "3.6.5"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.16.5",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/classnames": "2.3.1",
@@ -94,7 +96,6 @@
     "@types/react-select": "5.0.1",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
-    "@babel/eslint-parser": "7.16.5",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.3.0",
     "eslint-config-next": "^12.0.4",
