--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@headlessui/react": "1.4.2",
     "@heroicons/react": "1.0.5",
     "@next-auth/fauna-adapter": "0.2.4",
-    "@portis/web3": "^4.0.6",
+    "@portis/web3": "^4.0.7",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
@@ -34,19 +34,19 @@
     "@types/node": "^16.11.9",
     "@types/uuid": "8.3.3",
     "@uniswap/sdk-core": "^3.0.1",
-    "@uniswap/v3-periphery": "^1.2.1",
-    "@uniswap/v3-sdk": "^3.5.1-optimism-regensis",
+    "@uniswap/v3-periphery": "^1.4.0",
+    "@uniswap/v3-sdk": "^3.8.2",
     "@walletconnect/ethereum-provider": "^1.6.6",
     "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.1.6",
     "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/portis-connector": "^6.1.9",
+    "@web3-react/portis-connector": "^6.2.11",
     "@web3-react/walletconnect-connector": "6.2.8",
     "@web3-react/walletlink-connector": "^6.2.8",
     "airtable": "0.11.1",
     "autoprefixer": "^10.4.2",
     "aws-sdk": "2.1034.0",
-    "axios": "^0.24.0",
+    "axios": "^0.26.1",
     "bignumber.js": "9.0.1",
     "chart.js": "^2.9.4",
     "cheerio": "1.0.0-rc.10",
@@ -64,7 +64,7 @@
     "mixpanel-browser": "^2.42.0",
     "next": "^12.1.0",
     "next-auth": "^4.2.1",
-    "next-pwa": "^5.4.5",
+    "next-pwa": "^5.5.2",
     "next-seo": "^5.1.0",
     "next-themes": "^0.1.1",
     "nprogress": "0.2.0",
