--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cheerio": "1.0.0-rc.10",
     "classnames": "2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "dompurify": "^2.3.6",
     "events": "^3.3.0",
     "fauna-schema-migrate": "2.1.2",
     "faunadb": "4.4.1",
